<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go_under_trolley</name>
  <version>1.0.0</version>
  <description>ROS2 package to detect trolley and instruct the robot to go under the trolley</description>
  <maintainer email="michaeljonathan664@gmail.com">mich1342</maintainer>
  <license>Apache Lisence 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>PCL</depend>
  <depend>pcl_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
